Changes from jTDS 1.2.7
=======================

05/16/2013 - Holger Rehn
 o Added range check to class BlobBuffer as proposed by Benedict Elliott Smith.
 o Applied patch for explicitly creating an in-memory BlobBuffer provided by
   Benedict Elliott Smith.

05/03/2013 - Holger Rehn
 o Fixed a bug that could cause the statement cache to be disabled. 
 o Removed unnecessary synchronization overhead from SQL statement parser.

05/01/2013 - Holger Rehn
 o Fixed bug #687, JtdsObjectFactory don't accept the connection property name
   mappings used in jTDS versions up to jTDS 1.2.6.

04/02/2013 - Holger Rehn
 o Fixed bug #699, conversion from timestamp String to Date fails.

03/08/2013 - Holger Rehn
 o Improved fix for bug #694, the previous attempt wasn't sufficient.

03/07/2013 - Holger Rehn
 o Applied fix for bug #695 provided by Keith Robinson.
 o Fixed bug #694, jTDS logger may cause an NPE. 

02/24/2013 - Holger Rehn
 o Fixed bug #508, the driver ignored unspecified server errors signaled by a
   TDS DONE token if no ERROR token has been received before.

02/18/2013 - Holger Rehn
 o Fixed bug #682, error when using date/time escapes in a procedure call.

01/25/2013 - Holger Rehn
 o Added test for JDBC date/time escapes used in a procedure call.

12/24/2012 - Holger Rehn
 o Added test for bug #686, SQL error invalidates a Statement's internal state.
 o Fixed bug #626 by added a type mapping for java.math.BigInteger.

12/19/2012 - Holger Rehn
 o Applied fix for MSSQL 2000 compatibility provided by Andrew Fink (bug #683).

11/15/2012 - Holger Rehn
 o Fixed bug #552, jTDS fails to find an SQL Server instance if the discovery
   requests' response is split into multiple network packets.

10/28/2012 - Holger Rehn
 o Added test for bug #575, parameter types not available via ParameterMetaData.
 o Fixed build scripts, Maven artifacts are no included in the distro package.

===============================================================================